--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li><a href="Dia2_Menorca.html" target="_blank">Día 2 – Calas y Ciutadella</a></li>
         <li><a href="Dia3_Menorca.html" target="_blank">Día 3 – Fornells y Norte</a></li>
         <li><a href="Dia4_Menorca.html" target="_blank">Día 4 – Cala Mitjana y Binibeca</a></li>
+        <li><a href="0_Mapa_Itinerario_Menorca.html" target="_blank"><strong>Mapa general del itinerario completo</strong></a></li>
     </ul>
     <p>Abre cada enlace para acceder a tu mapa interactivo.</p>
 </body>
